--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9ef97a7d",
+   "id": "cabd7b11",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "41df3d0c",
+   "id": "88c6b88b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3873c032",
+   "id": "f811ffcd",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6a2ce1a",
+   "id": "a59c11aa",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "12ab5ace",
+   "id": "0ea12173",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "aa102b71",
+   "id": "642f6523",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cb9d1b09",
+   "id": "f5febd48",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf93000e",
+   "id": "9bfb055c",
    "metadata": {},
    "source": [
     "# Is `random` a module, or a variable?\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8e141a9",
+   "id": "cafa5793",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "59d6cfce",
+   "id": "29810838",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "67f008d5",
+   "id": "ac599893",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ff06881",
+   "id": "2ba3a4b8",
    "metadata": {},
    "source": [
     "When we use `import`, we're basically doing two things:\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c3563594",
+   "id": "6a8de597",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1e4f47ad",
+   "id": "00810094",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4b35c5a",
+   "id": "fe381cf9",
    "metadata": {},
    "source": [
     "What if I'm going to use `random.randint` many times in my program. Can I just write `randint`, without `random.` before it?\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5a536d43",
+   "id": "6fd09e37",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "658e4e5a",
+   "id": "11110894",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7b6c57c0",
+   "id": "b57a24f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1aeb15c0",
+   "id": "5b71cefd",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73cfcc7b",
+   "id": "89857108",
    "metadata": {},
    "source": [
     "# A few things about `from .. import ..`\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "754ec19d",
+   "id": "df0f7d79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9b40577c",
+   "id": "b90bbfdf",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "fbccd82c",
+   "id": "380778c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "147b506f",
+   "id": "8228181d",
    "metadata": {},
    "source": [
     "# Four ways to `import`:\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "021116ee",
+   "id": "a3af7394",
    "metadata": {},
    "source": [
     "# Exercise: Filenames that match\n",
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "31f45bf8",
+   "id": "d09fd6ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "95fff6b6",
+   "id": "f8f7dbb2",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a4415caa",
+   "id": "0e52a728",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "101919b2",
+   "id": "724b2dcc",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "3e5088b7",
+   "id": "097cfd2b",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b23c01d2",
+   "id": "e239120e",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a4e53ed2",
+   "id": "e4a86432",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4e871f39",
+   "id": "0ae6f43f",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "350453ba",
+   "id": "54cef3a1",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5dc1f7d",
+   "id": "71e2f574",
    "metadata": {},
    "source": [
     "# What's in a module?\n",
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7e692cdb",
+   "id": "55ba67f3",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6db1d872",
+   "id": "80c33f8c",
    "metadata": {},
    "source": [
     "# Unusual attribute names\n",
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "07253546",
+   "id": "dd53897b",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ab4bfe9e",
+   "id": "2af2001e",
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1543,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "99acb4f5",
+   "id": "1be817b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4bc6d90b",
+   "id": "02cc0a9c",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "1ef3eb9f",
+   "id": "4aa8d878",
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc77d572",
+   "id": "7c8c75d7",
    "metadata": {},
    "source": [
     "# Some of the dunder attributes on every module\n",
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "8ca2b41c",
+   "id": "28d18c40",
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1645,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "227adfd8",
+   "id": "e35f3a79",
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1666,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "2aa74de4",
+   "id": "59ee71b9",
    "metadata": {},
    "outputs": [
     {
@@ -1687,7 +1687,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "5df6d3bf",
+   "id": "c4cd11c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1697,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "7397a738",
+   "id": "af75e8a1",
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "be271672",
+   "id": "f563735f",
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1749,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "7326174d",
+   "id": "2b47c714",
    "metadata": {},
    "outputs": [
     {
@@ -1780,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "64c3e60e",
+   "id": "0a33a66f",
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1801,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "436ee600",
+   "id": "640d4be4",
    "metadata": {},
    "outputs": [
     {
@@ -1822,7 +1822,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "163afae7",
+   "id": "6e651d63",
    "metadata": {},
    "outputs": [
     {
@@ -1842,7 +1842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9ee194b",
+   "id": "6817ad02",
    "metadata": {},
    "source": [
     "# Exercise: Menu\n",
@@ -1864,7 +1864,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "b6fe0cd1",
+   "id": "2fe984b0",
    "metadata": {},
    "outputs": [
     {
@@ -1889,7 +1889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ceb44c5",
+   "id": "a608ed2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1912,7 +1912,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "d931a614",
+   "id": "94674aac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1922,7 +1922,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "4c674c77",
+   "id": "bef45877",
    "metadata": {},
    "outputs": [
     {
@@ -1943,7 +1943,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "f187dd26",
+   "id": "b7b14eb5",
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +1964,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "37302ae7",
+   "id": "d808a005",
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +1985,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "3c1b00f6",
+   "id": "513f02fa",
    "metadata": {},
    "outputs": [
     {
@@ -2013,7 +2013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fcc431e",
+   "id": "d5ee68e7",
    "metadata": {},
    "source": [
     "# Attributes vs. globals\n",
@@ -2028,7 +2028,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "ffc66177",
+   "id": "12dc5cfc",
    "metadata": {},
    "outputs": [
     {
@@ -2056,7 +2056,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9867519",
+   "id": "06c686a3",
    "metadata": {},
    "source": [
     "# `__name__` can have two values\n",
@@ -2071,7 +2071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be4c6e37",
+   "id": "e3b06d24",
    "metadata": {},
    "source": [
     "# `__name__` and `'__main__'`\n",
@@ -2091,7 +2091,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "93811e05",
+   "id": "0cca2c3c",
    "metadata": {},
    "outputs": [
     {
@@ -2112,7 +2112,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "3b496358",
+   "id": "1776286d",
    "metadata": {},
    "outputs": [
     {
@@ -2133,7 +2133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a13bd4c5",
+   "id": "11512653",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2147,7 +2147,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "8c62fb02",
+   "id": "ae53941a",
    "metadata": {
     "collapsed": true
    },
@@ -2328,7 +2328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9281b88c",
+   "id": "c86e1a85",
    "metadata": {},
    "source": [
     "# Exercise: File size\n",
@@ -2342,7 +2342,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "b462ff14",
+   "id": "3e57da6a",
    "metadata": {},
    "outputs": [
     {
@@ -2365,7 +2365,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "959945a7",
+   "id": "746d6af8",
    "metadata": {},
    "outputs": [
     {
@@ -2386,7 +2386,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "ada87a2d",
+   "id": "dfd20e2b",
    "metadata": {},
    "outputs": [
     {
@@ -2426,7 +2426,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "bbec78c6",
+   "id": "c3d5b305",
    "metadata": {},
    "outputs": [
     {
@@ -2460,7 +2460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "688ae1e5",
+   "id": "3d49abe6",
    "metadata": {},
    "source": [
     "# Beyond the standard library\n",
@@ -2478,7 +2478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05dfe163",
+   "id": "ab1b4759",
    "metadata": {},
    "source": [
     "# Exercise: Colorize text\n",
@@ -2491,8 +2491,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "id": "cc7bad63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: Reuven\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Hello, <span style=\"color: #800000; text-decoration-color: #800000; font-weight: bold\">Reuven</span>!\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Hello, \u001b[1;31mReuven\u001b[0m!\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from rich import print\n",
+    "\n",
+    "name = input('Enter your name: ').strip()\n",
+    "print(f\"Hello, [bold red]{name}[/bold red]!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0274109b",
+   "id": "20cf863a",
    "metadata": {},
    "outputs": [],
    "source": []
